@@ -117,7 +117,7 @@ sub _check_type {
 	if (none { $type eq $_ } ('bmp', 'gif', 'jpeg', 'png',
 		'pnm', 'raw', 'sgi', 'tga', 'tiff')) {
 
-		err "Suffix '$type' doesn't supported.";
+		err "Image type '$type' doesn't supported."
 	}
 
 	return;
@@ -214,10 +214,10 @@ Image::Checkerboard - Image generator for checkboards.
  create():
          Cannot write file to '$path'.",
 	         Error, %s
-         Suffix '%s' doesn't supported.
+         Image type '%s' doesn't supported.
 
  type():
-         Suffix '%s' doesn't supported.
+         Image type '%s' doesn't supported.
 
 
 =head1 EXAMPLE
